--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DataAdminActivity"></activity>
+        <activity android:name=".EditMahasiswa"></activity>
+        <activity android:name=".EditDosen" />
+        <activity android:name=".DataAdminActivity" />
         <activity android:name=".LihatDosen" />
         <activity android:name=".LihatKelas" />
         <activity android:name=".LihatKrs" />
@@ -22,19 +25,17 @@
         <activity android:name=".DataDosen" />
         <activity android:name=".RecycleView" />
         <activity android:name=".LihatMatkul" />
-        <activity android:name=".MenuAdmin">
-
-        </activity>
-        <activity android:name=".MenuMahasiswa"></activity>
+        <activity android:name=".MenuAdmin" />
+        <activity android:name=".MenuMahasiswa" />
         <activity android:name=".DataMahasiswa" />
-        <activity android:name=".LoginScreen" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".LoginScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".SpalshScreen"></activity>
+        <activity android:name=".SpalshScreen" />
         <activity android:name=".MainActivity" />
     </application>
 
